fixed team spacing

--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ h3 {
 .everyone-else {
     display: flex;
     flex-direction: row;
-    padding: 0vw 20vw;
+    padding: 0vw 12.5vw;
 }
 
 figure {
@@ -185,7 +185,7 @@ html {
         width: 25vw;
     }
     .figure-e {
-        width: 20vw;
+        width: 18vw;
     }
     .figure-image {
         width: 20vw;
@@ -197,7 +197,7 @@ html {
         padding: 0vw 12.5vw;
     }
     .everyone-else {
-        padding: 0vw 10vw;
+        padding: 0vw 5vw;
     }
     .navbar-brand,
     .navbar-toggler,
@@ -238,6 +238,21 @@ html {
         font-size: 1.2rem !important;
     }
 
+}
+
+@media (max-width: 500px) {
+    .figure-caption-title {
+        font-size: 1.2rem !important;
+    }
+    .figure-caption {
+        font-size: 1.0rem !important;
+    }
+    .figure-caption-e {
+        font-size: 0.8rem !important;
+    }
+    .figure-caption-title-e {
+        font-size: 1.0rem !important;
+    }
 }
 
 ::-webkit-scrollbar {
